<!--
    Inspired by:
    https://stackoverflow.com/questions/15832335/android-custom-row-item-for-listview

    -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/white"
    android:id="@+id/relLaytask">

    <ImageView
        android:id="@+id/isDoneimg"
        android:layout_width="68dp"
        android:layout_height="54dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="16dp"
        android:src="@drawable/notDone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/isDoneimg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/taskdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_title"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/taskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/assignee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/pick_date"
            android:textColor="#066223"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>