<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundGravity="center">

    <!-- ListView to display tasks -->

    <Button
        android:id="@+id/add"
        android:layout_width="274dp"
        android:layout_height="64dp"
        android:text="@string/add"
        app:icon="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.943" />

    <TextView
        android:id="@+id/appName2"
        android:layout_width="187dp"
        android:layout_height="59dp"
        android:fontFamily="@font/mirza"
        android:foregroundGravity="center"
        android:text="@string/task_title"
        android:textColor="#2F2E41"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

    <ListView
        android:id="@+id/taskListView"
        android:layout_width="348dp"
        android:layout_height="484dp"
        android:background="@android:color/background_light"
        android:clipToPadding="false"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="0.5dp"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:padding="16dp"
        android:scrollbarSize="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

    <Button
        android:id="@+id/find"
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:text="@string/search"
        app:icon="?android:attr/actionModeWebSearchDrawable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098" />

</androidx.constraintlayout.widget.ConstraintLayout>