<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.usermanagement.IntroductoryActivity">

    <Button
        android:id="@+id/btnlang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="35dp"
        android:text="@string/lang"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/textViewLoginPrompt"
        android:layout_width="311dp"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="57dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/mirza"
        android:foregroundGravity="center_vertical|center|center_horizontal"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/welcome_back_to_projectaty"
        android:textColor="@android:color/black"
        android:textSize="27sp" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="281dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/welcome_back" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="96dp"
        android:text="@string/login"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="274dp"
        android:layout_height="109dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="185dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:foregroundGravity="center_vertical|center|center_horizontal"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/welcome_about"
        android:textSize="24sp" />

</RelativeLayout>